Wed Apr 13 22:45:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/.cvsignore doc/userguide.sgml src/tds/config.c
	- minor changes to log messages 

Tue Apr 12 11:26:29 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c 
	- bcp_send row returns FAIL if dbconvert fails to 
	- convert the bound buffer to the column datatype

Mon Apr 11 17:33:38 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/tds.h include netinet/in.h

Mon Apr 11 15:43:45 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: fix OpenSSL compile problem

Mon Apr 11 11:56:44 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/defncopy.c:
	- include sybfront.h instead of sqlfront.h (from patches #3172166)

Sat Apr  9 10:02:49 EDT 2011	JK Lowden <jklowden@freetds.org>
	* ChangeLog ChangeLog-0.91 start a new change log

Sat Apr  9 08:48:22 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am make dist works

Thu Apr  7 10:06:28 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/dblib/bcp.c:
	- bcp path from Bill Thompson: support FIRE_TRIGGERS hint, fix -h
	  in freebcp app

Sat Apr  2 07:18:16 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/tds/config.c src/tds/login.c
	- Support DBSETLDBNAME (really, this time)

Sat Apr  2 07:12:57 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml fixed indentation of sample code. 

Fri Apr  1 13:44:39 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: avoid string format problem

Wed Mar 30 14:53:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: future developing version!
	
Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
	* ChangeLog  truncated because of release
	* ChangeLog-0.91 added because of release

$FreeTDS$
$Id: ChangeLog,v 1.3219 2011-04-14 02:47:07 jklowden Exp $